@@ -1,3 +1,9 @@
+2001-07-13 Alexander Rawass <alexannika@users.sourceforge.net>
+
+	* user can click on rectangles and select/deselect them
+	* those rectangles are stored in a list and appear
+	  at the bottom of the right-button popupmenu
+	
 2001-07-12 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* user can search for regexp, matches get highlighted
